--- a/markup/index.html
+++ b/markup/index.html
@@ -73,6 +73,25 @@
 					</h3>
 				</div>
 			</div>
+
+			<div class="authorBlock">
+				<a class="authorBlock-img" href="">
+					<img src="/uploads/img/user-logo-small.jpg" alt="">
+				</a>
+				<div class="authorBlock-authorAndDate">
+					<a class="authorBlock-name" href="">
+						<span> Алексей Чалый </span>
+					</a>
+					<span class="authorBlock-date" href="">
+						<span> 1 ноя в 22:22 </span>
+					</span>
+				</div>
+
+				<button class="authorBlock-moreBtn waves-effect waves-light">
+					<i class="material-icons"> more_vert </i>
+				</button>
+			</div>
+
 			<div class="card-content">
 				<p class="text-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -122,6 +141,25 @@
 					</h3>
 				</div>
 			</div>
+
+			<div class="authorBlock">
+				<a class="authorBlock-img" href="">
+					<img src="/uploads/img/user-logo-small.jpg" alt="">
+				</a>
+				<div class="authorBlock-authorAndDate">
+					<a class="authorBlock-name" href="">
+						<span> Алексей Чалый </span>
+					</a>
+					<span class="authorBlock-date" href="">
+						<span> 29 сен в 11:10 </span>
+					</span>
+				</div>
+
+				<button class="authorBlock-moreBtn waves-effect waves-light">
+					<i class="material-icons"> more_vert </i>
+				</button>
+			</div>
+
 			<div class="card-content">
 				<p class="text-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -135,6 +173,23 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
+
+			<div class="likeAndComments">
+				<div class="likesBlock txt-light">
+					<i class="material-icons"> thumb_up </i>
+					<span> Мне нравится </span>
+					<span class="txt-bold"> 117 </span>
+				</div>
+
+				<div class="shareBlock txt-light">
+					<i class="material-icons"> share </i>
+					<span> Поделились </span>
+					<span class="txt-bold"> 99 </span>
+				</div>
+
+				<button class="btnComments"> <span>Комментировать</span> </button>
+			</div>
+
 			<div class="card-controls">
 				<button class="card-controls-btn btn-white  waves-effect waves-light"> <span>Читать далее</span> </button>
 			</div>
@@ -153,6 +208,25 @@
 					</h3>
 				</div>
 			</div>
+
+			<div class="authorBlock">
+				<a class="authorBlock-img" href="">
+					<img src="/uploads/img/user-logo-small.jpg" alt="">
+				</a>
+				<div class="authorBlock-authorAndDate">
+					<a class="authorBlock-name" href="">
+						<span> Алексей Чалый </span>
+					</a>
+					<span class="authorBlock-date" href="">
+						<span> 29 сен в 10:31 </span>
+					</span>
+				</div>
+
+				<button class="authorBlock-moreBtn waves-effect waves-light">
+					<i class="material-icons"> more_vert </i>
+				</button>
+			</div>
+
 			<div class="card-content">
 				<p class="text-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -166,8 +240,25 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
+
+			<div class="likeAndComments">
+				<div class="likesBlock txt-light">
+					<i class="material-icons"> thumb_up </i>
+					<span> Мне нравится </span>
+					<span class="txt-bold"> 391 </span>
+				</div>
+
+				<div class="shareBlock txt-light">
+					<i class="material-icons"> share </i>
+					<span> Поделились </span>
+					<span class="txt-bold"> 317 </span>
+				</div>
+
+				<button class="btnComments"> <span>Комментировать</span> </button>
+			</div>
+
 			<div class="card-controls">
-				<button class="card-controls-btn btn-half btn-white  waves-effect waves-light"> <span>Читать далее</span> </button>
+				<button class="card-controls-btn btn-white  waves-effect waves-light"> <span>Читать далее</span> </button>
 			</div>
 		</div>
 	</div>
