added groupmates and specialists

--- a/markup/index.html
+++ b/markup/index.html
@@ -24,6 +24,15 @@
 					<h3 class="homeSlider-keyWordTitle"> <span>Интеллект</span> </h3>
 
 					<a class="homeSlider-btn btn waves-effect waves-light"> <span>Новости ИКСа</span> </a>
+
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Скоро: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Відкриття 15-ї обласної науково-практичної конференції Одеського територіального відділення Малої академії наук </span> </a>
+					</div>
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Недавнее событие: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Отчёт об конференции по Python в рамках ICS IT-School ( + фото) </span> </a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -35,6 +44,15 @@
 					<h3 class="homeSlider-keyWordTitle"> <span>Интеллект</span> </h3>
 
 					<a class="homeSlider-btn btn waves-effect waves-light"> <span>Новости ИКСа</span> </a>
+
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Скоро: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Відкриття 15-ї обласної науково-практичної конференції Одеського територіального відділення Малої академії наук </span> </a>
+					</div>
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Недавнее событие: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Отчёт об конференции по Python в рамках ICS IT-School ( + фото) </span> </a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -46,13 +64,22 @@
 					<h3 class="homeSlider-keyWordTitle"> <span>Интеллект</span> </h3>
 
 					<a class="homeSlider-btn btn waves-effect waves-light"> <span>Новости ИКСа</span> </a>
+
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Скоро: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Відкриття 15-ї обласної науково-практичної конференції Одеського територіального відділення Малої академії наук </span> </a>
+					</div>
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Недавнее событие: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Отчёт об конференции по Python в рамках ICS IT-School ( + фото) </span> </a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
 
-<h3 class="main-title"> <span>Новости</span> </h3>
+<h3 class="main-title upper"> <span>Новости</span> </h3>
 
 <div class="homeNews row">
 	<div class="col l6 m6 s12 post-wrapper">
