--- a/markup/specialists.html
+++ b/markup/specialists.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="./css/all.min.css">
 
 	<link rel="icon" type="image/x-icon" href="img/ics-ico.png">
-	<title>Ищут работу</title>
+	<title>Специалисты</title>
 </head>
 <body>
 
@@ -48,6 +48,10 @@
 								<span class="param-value"> Junior Frontend Developer </span>
 							</div>
 							<div class="userPreview-param">
+								<span> Опыт работы: </span>
+								<span class="param-value"> 1 год </span>
+							</div>
+							<div class="userPreview-param">
 								<span> Профессиональные навыки: </span>
 								<span class="param-value">  Javascript • React.js • Angular.js • CSS • HTML • Grunt.js • Git</span>
 							</div>
@@ -77,6 +81,10 @@
 							<div class="userPreview-param">
 								<span> Позиция: </span>
 								<span class="param-value"> Middle C++ Developer </span>
+							</div>
+							<div class="userPreview-param">
+								<span> Опыт работы: </span>
+								<span class="param-value"> 3 года </span>
 							</div>
 							<div class="userPreview-param">
 								<span> Профессиональные навыки: </span>
