--- a/markup/specialists.html
+++ b/markup/specialists.html
@@ -40,7 +40,7 @@
 								<span> Владимир Круглов </span>
 							</a>
 							<div class="userPreview-param">
-								<span> Резюме в PDF: </span>
+								<span> Резюме: </span>
 								<span class="param-value"> <a href=""> Resume. V. Kruglov.pdf </a> </span>
 							</div>
 							<div class="userPreview-param">
