--- a/markup/user.html
+++ b/markup/user.html
@@ -43,8 +43,8 @@
 				<span class="param-value"> Компьютерные науки </span>
 			</div>
 			<div class="page-param">
-				<span> Работает в: </span>
-				<span class="param-value"> Luxoft </span>
+				<span> Рабочий статус: </span>
+				<span class="param-value"> Ищу работу </span>
 			</div>
 
 			<ul class="collapsible clearfix" data-collapsible="expandable">
@@ -57,10 +57,6 @@
 						<div class="page-param">
 							<span> Город: </span>
 							<span class="param-value"> Одесса </span>
-						</div>
-						<div class="page-param">
-							<span> Зароботная плата: </span>
-							<span class="param-value"> 1500$ </span>
 						</div>
 						<div class="page-param">
 							<span> Интересы: </span>
