--- a/markup/news.html
+++ b/markup/news.html
@@ -75,19 +75,13 @@
 			</div>
 
 			<div class="likeAndComments">
-				<div class="likesBlock txt-light">
-					<i class="material-icons"> thumb_up </i>
-					<span> Мне нравится </span>
-					<span class="txt-bold"> 702 </span>
-				</div>
-
 				<div class="shareBlock txt-light">
 					<i class="material-icons"> share </i>
 					<span> Поделились </span>
 					<span class="txt-bold"> 105 </span>
 				</div>
 
-				<button class="btnComments"> <span>Комментировать</span> </button>
+				<button class="btnComments"> <span>Комментарии (3)</span> </button>
 			</div>
 
 			<div class="card-controls">
@@ -145,19 +139,13 @@
 			</div>
 
 			<div class="likeAndComments">
-				<div class="likesBlock txt-light">
-					<i class="material-icons"> thumb_up </i>
-					<span> Мне нравится </span>
-					<span class="txt-bold"> 117 </span>
-				</div>
-
 				<div class="shareBlock txt-light">
 					<i class="material-icons"> share </i>
 					<span> Поделились </span>
 					<span class="txt-bold"> 99 </span>
 				</div>
 
-				<button class="btnComments"> <span>Комментировать</span> </button>
+				<button class="btnComments"> <span>Комментарии (3)</span> </button>
 			</div>
 
 			<div class="card-controls">
@@ -214,19 +202,13 @@
 			</div>
 
 			<div class="likeAndComments">
-				<div class="likesBlock txt-light">
-					<i class="material-icons"> thumb_up </i>
-					<span> Мне нравится </span>
-					<span class="txt-bold"> 391 </span>
-				</div>
-
 				<div class="shareBlock txt-light">
 					<i class="material-icons"> share </i>
 					<span> Поделились </span>
 					<span class="txt-bold"> 317 </span>
 				</div>
 
-				<button class="btnComments"> <span>Комментировать</span> </button>
+				<button class="btnComments"> <span>Комментарии (3)</span> </button>
 			</div>
 
 			<div class="card-controls">
