--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
 
 	<link rel="stylesheet" href="/markup/css/all.min.css">
 
-	<link rel="icon" type="image/x-icon" href="img/ics-ico.png">
-	<title>ИКС ОНПУ</title>
+	<link rel="icon" type="image/x-icon" href="/markup/img/ics-ico.png">
 </head>
 
 <body>
