--- a/markup/users.html
+++ b/markup/users.html
@@ -10,11 +10,11 @@
 	<link rel="stylesheet" href="./css/all.min.css">
 
 	<link rel="icon" type="image/x-icon" href="img/ics-ico.png">
-	<title>Поиск одногуппников</title>
+	<title>Поиск людей</title>
 </head>
 <body>
 
-<h3 class="main-title"> <span>Поиск одногуппников</span> </h3>
+<h3 class="main-title"> <span>Поиск людей</span> </h3>
 
 <div class="container">
 	<div class="row">
