--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
 
 <script type="text/javascript" src="components/pages/home/home.controller.js"></script>
 <script type="text/javascript" src="components/pages/users/users.controller.js"></script>
+<script type="text/javascript" src="components/pages/login/login.controller.js"></script>
+<script type="text/javascript" src="components/pages/register/register.controller.js"></script>
 
 </body>
 </html>
