added news page

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 <script type="text/javascript" src="components/pages/users/users.controller.js"></script>
 <script type="text/javascript" src="components/pages/login/login.controller.js"></script>
 <script type="text/javascript" src="components/pages/register/register.controller.js"></script>
+<script type="text/javascript" src="components/pages/news/news.controller.js"></script>
 
 </body>
 </html>
