added admin page

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
 <div id="page-top" class="page-top"></div>
 <ng-view></ng-view>
 
+<script src="../node_modules/js-cookie/src/js.cookie.js"></script>
+
 <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="/node_modules/materialize-css/dist/js/materialize.min.js"></script>
 <!-- <script src="/markup/js/scripts.js"></script> -->
@@ -27,6 +29,7 @@
 
 <script type="text/javascript" src="components/factories/ui.factory.js"></script>
 
+<script type="text/javascript" src="components/pages/admin/admin.controller.js"></script>
 <script type="text/javascript" src="components/pages/home/home.controller.js"></script>
 <script type="text/javascript" src="components/pages/users/users.controller.js"></script>
 <script type="text/javascript" src="components/pages/login/login.controller.js"></script>
