--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
 <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="/node_modules/materialize-css/dist/js/materialize.min.js"></script>
-<!-- <script src="/markup/js/scripts.js"></script> -->
+<script src="/markup/js/scripts.js"></script>
 
 <script type="text/javascript" src="/node_modules/angular/angular.min.js"></script>
 <script type="text/javascript" src="/node_modules/angular-route/angular-route.min.js"></script>
