--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 <script type="text/javascript" src="components/pages/login/login.controller.js"></script>
 <script type="text/javascript" src="components/pages/register/register.controller.js"></script>
 <script type="text/javascript" src="components/pages/news/news.controller.js"></script>
+<script type="text/javascript" src="components/pages/post/post.controller.js"></script>
 
 </body>
 </html>
