--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
 <script type="text/javascript" src="components/pages/admin/admin.controller.js"></script>
 <script type="text/javascript" src="components/pages/home/home.controller.js"></script>
 <script type="text/javascript" src="components/pages/users/users.controller.js"></script>
+<script type="text/javascript" src="components/pages/user/user.controller.js"></script>
 <script type="text/javascript" src="components/pages/login/login.controller.js"></script>
 <script type="text/javascript" src="components/pages/register/register.controller.js"></script>
 <script type="text/javascript" src="components/pages/news/news.controller.js"></script>
